# CI-CD-with-Github-Actions

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  self_guide.txt  setup.cfg  setup.py  tox.ini  trial.py
.github/workflows/: tests.yml
pytest_env/: pyvenv.cfg
src/slapping/: slap_that_like_button.py
src/slapping.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_slapping.py
