[metadata]
name = slapping
description = slap that like button
author = Adeniyi
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    slapping
install_requires =
    requests>=2

# the dependencies, needed to run your package
# not compulsory, but if given, you will need to create a 'requirement.txt' file with specific versions

python_requires = >=3.6
package_dir =
    =src
zip_safe = no


# Below are not needed to install the package but since we install the package usiing pip install -e .
# Any update we make, will be reflected in the whole package. Infact, all the install does is to create a link into the source code directory
# this is the testing dependencies
# therefore, we need to have ran 'pip install -r requirements_dev.txt' before testing

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24




# to indicate that source code has been typed-inted, thus need the py.typed empty file
[options.package_data]
slapping = py.typed


# config file allowed by flake8..... others (mypy and pytest wants .toml file)
[flake8]
max-line-length = 160